gcc/testsuite/gcc.target/aarch64/arch-diagnostics-2.c
/* { dg-error "missing" "" {target "aarch64*-*-*" } } */
/* { dg-options "-O2 -march=+dummy" } */

void f ()
{
  return;
}
